@@ -17,7 +17,9 @@ INOTIFY_CFLAGS = $(shell test -e /usr/include/sys/inotify.h || echo -DNO_SYS_INO
 CFLAGS = -g -O2 -Wall $(DBUS_CFLAGS) $(GTK_CFLAGS) $(CONFUSE_CFLAGS) $(GLADE_CFLAGS)
 LDFLAGS = -lpthread $(DBUS_LIBS) $(GTK_LIBS) $(CONFUSE_LIBS) $(GLADE_LIBS)
 
-SOURCES = gpomme.c theme.c conffile.c ../client-common/dbus-client.c
+SOURCES = gpomme.c theme.c conffile.c \
+		../client-common/dbus-client.c \
+		../client-common/video-client.c
 POFILES = po/fr.po po/de.po po/es.po po/it.po
 
 OBJS = $(SOURCES:%.c=%.o)
@@ -29,13 +31,15 @@ mo: $(MOFILES)
 
 gpomme: $(OBJS) $(LIBS)
 
-gpomme.o: gpomme.c gpomme.h theme.h ../client-common/dbus-client.h
+gpomme.o: gpomme.c gpomme.h theme.h ../client-common/dbus-client.h ../client-common/video-client.h
 
 theme.o: theme.c theme.h gpomme.h
 
 conffile.o: conffile.c conffile.h gpomme.h theme.h
 
 ../client-common/dbus-client.o: ../client-common/dbus-client.c ../client-common/dbus-client.h
+
+../client-common/video-client.o: ../client-common/video-client.c ../client-common/video-client.h
 
 %.mo: %.po
 	@echo Building $@...
